--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <title>UX Lab / Macropay</title>
+
     <!-- STYLES -->
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet"> -->
     <!-- /Google Fonts -->
     <link rel="stylesheet" type="text/css" href="css/plugins.css" />
     <link rel="stylesheet" type="text/css" href="css/dark.css" />
@@ -224,7 +220,6 @@
                         </div>
                         <div class="info_right">
                             <div class="edrea_title m-4">
-                                <!-- <p class="sub_text"><span>experts growts</span></p> -->
                                 <h3 class="title">Que <strong><span>NO</span></strong> deben <br> hacer los <span> Stakeholders</span></h3>
                             </div>
                             <div class="edrea_checklist">
@@ -372,7 +367,6 @@
                     <div class="content">
                         <div class="testi_left">
                             <div class="edrea_title">
-                                <!-- <p class="sub_text"><span>Testimonios</span></p> -->
                                 <h3 class="title">Testimonios</h3>
                                 <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar productos digitales?</p>
                             </div>
@@ -397,7 +391,7 @@
                                         <div class="item_in">
                                             <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
-                                                <p>Me parece muy dinamica y ordenada. </p>
+                                                <p>Me parece muy dinámica y ordenada. </p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/1.jpg"></span>
@@ -410,7 +404,7 @@
                                         <div class="item_in">
                                             <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
-                                                <p>Lider de Proyectos TD</p>
+                                                <p>Creo que la parte de UX debe de estar involucrado en los kickoff para que estemos en la misma linea y optimizar tiempos de creación y entrega para web y mobile.</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/2.jpg"></span>
@@ -479,15 +473,11 @@
                                         </div>
                                         <div class="description">
                                             <h3>World’s most famous developers and designers</h3>
-                                            <p>Just because we can't get out and about like we normally would, doesn’t
-                                                mean we have to taking pictures. There’s still plenty you can do,
-                                                provided you're prepared to use some imagination. Here are a few ideas
-                                                to keep you shooting until normal life resumes.</p>
-                                            <p>Most photographers love to shoot the unusual, and you don’t get much more
-                                                unusual than These Unprecedented Times. Right now everything counts as
-                                                out of the ordinary. There are a number of remarkable things about these
-                                                lockdown days that are worth photographing now we can remember them when
-                                                it is all over.</p>
+                                            <p>
+                                                Utilizar un sistema de diseño garantiza la consistencia de nuestros productos. Esto repercute de manera positiva en la experiencia del usuario y acorta significativamente los tiempos de ideación, desarrollo y elaboración de productos. Por otra parte, los sistemas de diseño son una herramienta especialmente útil para conseguir crear productos digitales capaces de escalar y crecer rápidamente de una forma controlada. 
+                                                <br>
+                                                Por último, pero no menos importante, un valor que aporta es que permite dedicar menos tiempo a pensar en detalles superfluos y más a pensar en producto.
+                                            </p>
                                             <h3>What Is Branding?</h3>
                                             <p>Nullam blandit constituto eam ne, te nam ignota vituper.atoribus. Malis
                                                 cetero quem saipe, prou thendrerit voluptaria.</p>
@@ -675,11 +665,13 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <p>Streets empty that are usually busy are remarkable and can evoke the
+                                            <p>
+                                                Streets empty that are usually busy are remarkable and can evoke the
                                                 sense of historical pictures from before the invention of the motorcar.
                                                 Other things that are different at the moment will be queues to get into
                                                 stores and the lines marked out on the floor to show how far apart we
-                                                should be.</p>
+                                                should be.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -707,22 +699,7 @@
                                             
                                             <h3>Alcance general</h3>
                                             <p>Tener una app personalizada para tener un registro de ventas realizadas por integrantes para recibir su comisión por cada venta registrada.</p>
-                                            <!-- <div class="in_list">
-                                                <ul>
-                                                    <li>
-                                                        <p>Email is a crucial channel in any marketing.</p>
-                                                    </li>
-                                                    <li>
-                                                        <p>Curious what to say? How to say it?</p>
-                                                    </li>
-                                                    <li>
-                                                        <p>Whether you’re kicking off a new ca mpaign.</p>
-                                                    </li>
-                                                    <li>
-                                                        <p>Habitasse per feugiat aliquam luctus accumsan curae</p>
-                                                    </li>
-                                                </ul>
-                                            </div> -->
+
                                             <p>Streets empty that are usually busy are remarkable and can evoke the
                                                 sense of historical pictures from before the invention of the motorcar.
                                                 Other things that are different at the moment will be queues to get into
