--- a/index.html
+++ b/index.html
@@ -376,7 +376,6 @@
                                 <div class="owl-carousel">
                                     <div class="item">
                                         <div class="item_in">
-                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>Se tiene una claridad y alcance del proyecto desde el diseño ayuda mucho a medir tiempos y apoyar al cliente (PO) a aterrizar la idea o solución.</p>
                                             </div>
@@ -389,7 +388,6 @@
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
-                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>Me parece muy dinámica y ordenada. </p>
                                             </div>
@@ -402,7 +400,6 @@
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
-                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>Creo que la parte de UX debe de estar involucrado en los kickoff para que estemos en la misma linea y optimizar tiempos de creación y entrega para web y mobile.</p>
                                             </div>
@@ -415,7 +412,6 @@
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
-                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>Paguitos Móvil</p>
                                             </div>
@@ -423,6 +419,18 @@
                                                 <span class="image" data-img-url="img/testimonial/3.jpg"></span>
                                                 <h3>Santa Rita De Jesus Barbudo Campos</h3>
                                                 <p>Gerente de Voz de Cliente y Diseño de Experiencias Experiencia de Clientes</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="item_in">
+                                            <div class="description">
+                                                <p>El trabajar por celulas el equipo de UX le permite optimizar los productos o interfaces digitales </p>
+                                            </div>
+                                            <div class="title">
+                                                <span class="image" data-img-url="img/testimonial/3.jpg"></span>
+                                                <h3>Abraham Isaac Vallejo Amezcua</h3>
+                                                <p>Diseñador UX UI / Macropay</p>
                                             </div>
                                         </div>
                                     </div>
