--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                     <div class="item">
                                         <div class="item_in">
                                             <div class="description">
-                                                <p>El trabajar por celulas el equipo de UX le permite optimizar los productos o interfaces digitales </p>
+                                                <p>El trabajar por celulas el equipo de UX le permite optimizar los productos o interfaces digitales el conocer a los usuarios es la parte mas importante del proceso.</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/3.jpg"></span>
