--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <title>UX Lab / Macropay</title>
-
     <!-- STYLES -->
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -162,6 +161,10 @@
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
                                         <h3>Datos y evaluación de usurios</h3>
                                     </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h3>Indicadores de satisfacción del cliente KEIs</h3>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -201,7 +204,7 @@
                     <div class="content">
                         <div class="info_left">
                             <div class="edrea_title">
-                                <p class="sub_text"><span>*Stakeholders interesados del proyecto</span></p>
+                                <p class="sub_text"><span>*Stakeholders son las partes intersadas.</span></p>
                                 <h3 class="title"><span>Stakeholders</span> comparten <br><span>visión y objetivos</span></h3>
                             </div>
                             <div class="edrea_checklist">
@@ -368,7 +371,8 @@
                         <div class="testi_left">
                             <div class="edrea_title">
                                 <h3 class="title">Testimonios</h3>
-                                <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar productos digitales?</p>
+                                <br>
+                                <h5 class="description">¿Qué dicen los colaboradores Macropay <br> con esta forma crear, actualizar o renovar productos digitales?</h5>
                             </div>
                         </div>
                         <div class="testi_right">
@@ -380,7 +384,7 @@
                                                 <p>Se tiene una claridad y alcance del proyecto desde el diseño ayuda mucho a medir tiempos y apoyar al cliente (PO) a aterrizar la idea o solución.</p>
                                             </div>
                                             <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/2.jpg"></span>
+                                                <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
                                                 <h3>Luis Vargas</h3>
                                                 <p>Lider de proyectos TD</p>
                                             </div>
@@ -392,9 +396,9 @@
                                                 <p>Me parece muy dinámica y ordenada. </p>
                                             </div>
                                             <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/1.jpg"></span>
+                                                <span class="image" data-img-url="img/portfolio/paguitos-logo.png"></span>
                                                 <h3>Gerardo Villela Arredondo</h3>
-                                                <p>Sub Director Operaciones de TI (Paguitos Movil)</p>
+                                                <p>Sub Director Operaciones de TD</p>
                                             </div>
                                         </div>
                                     </div>
@@ -404,7 +408,7 @@
                                                 <p>Creo que la parte de UX debe de estar involucrado en los kickoff para que estemos en la misma linea y optimizar tiempos de creación y entrega para web y mobile.</p>
                                             </div>
                                             <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/2.jpg"></span>
+                                                <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
                                                 <h3>Carmen Angelica Can Chable</h3>
                                                 <p>Gerente Mobile</p>
                                             </div>
@@ -413,24 +417,24 @@
                                     <div class="item">
                                         <div class="item_in">
                                             <div class="description">
-                                                <p>Paguitos Móvil</p>
+                                                <p>Considero que toda iniciativa que tenga como objetivo el alinear criterios y reducir tiempos de respuesta, siempre será bienvenida.</p>
                                             </div>
                                             <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/3.jpg"></span>
-                                                <h3>Santa Rita De Jesus Barbudo Campos</h3>
-                                                <p>Gerente de Voz de Cliente y Diseño de Experiencias Experiencia de Clientes</p>
+                                                <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
+                                                <h3>Rita Barbudo Campos</h3>
+                                                <p>Gerente de Voz de Cliente y Diseño de Experiencias de clientes</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
                                             <div class="description">
-                                                <p>El trabajar por celulas el equipo de UX le permite optimizar los productos o interfaces digitales el conocer a los usuarios es la parte mas importante del proceso.</p>
+                                                <p>Al trabajar por celulas el equipo de UX le permite optimizar los productos o interfaces digitales conociendo a sus usuarios.</p>
                                             </div>
                                             <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/3.jpg"></span>
+                                                <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
                                                 <h3>Abraham Isaac Vallejo Amezcua</h3>
-                                                <p>Diseñador UX UI / Macropay</p>
+                                                <p>Diseñador UX UI</p>
                                             </div>
                                         </div>
                                     </div>
@@ -449,15 +453,40 @@
             </div>
         </section>
         <!-- /Testimonials -->
+        <!-- Organigrama -->
+        <section id="organigrama">
+            <div class="grid-container">
+                <div class="item-left">
+                    <h2 class="title">Equipo centralizado de UX</h2>
+                    <img src="img/organigrama-ux.jpg" alt="Organigrama UX Lab">
+                    <small>Organigrama UX team</small>
+                </div>
+                <div class="item-right">
+                    <ul class="list-grid-info">
+                        <br><br>
+                        <li class="list-info">
+                            <h4>UX a alto nivel</h4>
+                            <p>Tener un gestor de UX significa que hay una persona que observa el rendimiento y las contribuciones de ese grupo. </p>
+                        </li>
+                        <li class="list-info">
+                            <h4>Rutas de carrera conocidas</h4>
+                            <p>Los miembros del equipo trabajan en uno o muchos proyectos dependiendo de la carga de trabajo. Un proyecto puede ser corto o largo. </p>
+                        </li>
+                        <li class="list-info">
+                            <h4>Recursos compartidos en el equipo de UX</h4>
+                            <p>Un equipo centralizado comparte los recursos de diseño y desarrollo además del conocimiento. Cultivando el crecimiento personal y aumentando el expertise del equipo de trabajo. </p>
+                        </li>
+                    </ul>
+                </div>
+        </section>
+        <!-- Organigrama -->
         <!-- proyctos -->
         <section id="proyectos">
             <div class="edrea_news">
                 <div class="container">
                     <div class="content">
                         <div class="edrea_title bg_white">
-                            <!--<p class="sub_text"><span>Proyectos</span></p>-->
                             <h3 class="title">Proyectos realizados <br> <span>desde casa</span></h3>
-                           
                         </div>
                         <div class="edrea_news_slider">
                             <div class="owl-carousel modal_items" data-from="news" data-count="5">
@@ -482,7 +511,7 @@
                                         <div class="description">
                                             <h3>World’s most famous developers and designers</h3>
                                             <p>
-                                                Utilizar un sistema de diseño garantiza la consistencia de nuestros productos. Esto repercute de manera positiva en la experiencia del usuario y acorta significativamente los tiempos de ideación, desarrollo y elaboración de productos. Por otra parte, los sistemas de diseño son una herramienta especialmente útil para conseguir crear productos digitales capaces de escalar y crecer rápidamente de una forma controlada. 
+                                                Utilizar un sistema de diseño garantiza la consistencia de nuestros productos. Esto repercute de manera positiva en la experiencia del usuario y acorta significativamente los tiempos de ideación, desarrollo y elaboración de productos. Por otra parte, los sistemas de diseño son una herramienta especialmente útil para conseguir crear productos digitales capaces de escalar y crecer rápidamente de una forma controlada.
                                                 <br>
                                                 Por último, pero no menos importante, un valor que aporta es que permite dedicar menos tiempo a pensar en detalles superfluos y más a pensar en producto.
                                             </p>
@@ -704,10 +733,8 @@
                                         <div class="description">
                                             <h3>Objetivo general</h3>
                                             <p>Crear una app para que el vendedor del socio registre todas ventas realizadas en la consola de paguitos móvil, para un control del pago de comisiones generadas de manera semanal.</p>
-                                            
                                             <h3>Alcance general</h3>
                                             <p>Tener una app personalizada para tener un registro de ventas realizadas por integrantes para recibir su comisión por cada venta registrada.</p>
-
                                             <p>Streets empty that are usually busy are remarkable and can evoke the
                                                 sense of historical pictures from before the invention of the motorcar.
                                                 Other things that are different at the moment will be queues to get into
@@ -730,7 +757,7 @@
         <footer class="edrea_footer">
             <div class="container">
                 <div class="content">
-                    <p>Hecho con 💙 por MKT / Julio C. Poxtan D. - Diseñador UX UI</p>
+                    <p>Hecho con 💙 por MKT Macropay / Julio C. Poxtan D. - Diseñador UX UI</p>
                 </div>
             </div>
         </footer>
