--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="marketify">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"> -->
     <title>UX Lab / Macropay</title>
     <!-- STYLES -->
     <!-- Google Fonts -->
@@ -67,6 +67,7 @@
                                 <li><a href="#ventajas">Ventajas</a></li>
                                 <li><a href="#information">Funcionamiento</a></li>
                                 <li><a href="#testimonials">Testimonios</a></li>
+                                <li><a href="#organigrama">Organigrama UX</a></li>
                                 <li><a href="#proyectos">Proyectos</a></li>
                                 <!-- <li><a href="#news">Recursos</a></li> -->
                                 <!-- <li class="button"><a href="#contact">Contact</a></li>-->
@@ -104,6 +105,7 @@
                             <li><a href="#ventajas">Ventajas</a></li>
                             <li><a href="#information">Funcionamiento</a></li>
                             <li><a href="#testimonials">Testimonios</a></li>
+                            <li><a href="#organigrama">Organigrama UX </a></li>
                             <li><a href="#proyectos">Proyectos</a></li>
                             <!-- <li><a href="#news">Recursos</a></li> -->
                             <!-- <li class="button"><a href="#contact">Contact</a></li> -->
@@ -147,7 +149,7 @@
                                 <ul>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h3>Reduce el “tiempo de lanzamiento”</h3>
+                                        <h3>Reduce el “tiempo de lanzamiento” de cualquier MVP</h3>
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
@@ -159,7 +161,7 @@
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h3>Datos y evaluación de usurios</h3>
+                                        <h3>Datos y evaluación de usuarios</h3>
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
@@ -417,24 +419,24 @@
                                     <div class="item">
                                         <div class="item_in">
                                             <div class="description">
-                                                <p>Considero que toda iniciativa que tenga como objetivo el alinear criterios y reducir tiempos de respuesta, siempre será bienvenida.</p>
+                                                <p>Super padre ya que esto ayuda a estar en una vanguardia tecnológica competitiva.</p>
                                             </div>
                                             <div class="title">
-                                                <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
-                                                <h3>Rita Barbudo Campos</h3>
-                                                <p>Gerente de Voz de Cliente y Diseño de Experiencias de clientes</p>
+                                                <span class="image" data-img-url="img/portfolio/paguitos-logo.png"></span>
+                                                <h3>Jose Guadalupe Puc Samos</h3>
+                                                <p>Gerente de Operaciones</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
                                             <div class="description">
-                                                <p>Al trabajar por celulas el equipo de UX le permite optimizar los productos o interfaces digitales conociendo a sus usuarios.</p>
+                                                <p>Considero que toda iniciativa que tenga como objetivo el alinear criterios y reducir tiempos de respuesta, siempre será bienvenida.</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
-                                                <h3>Abraham Isaac Vallejo Amezcua</h3>
-                                                <p>Diseñador UX UI</p>
+                                                <h3>Rita Barbudo Campos</h3>
+                                                <p>Gerente de Voz de Cliente y Diseño de Experiencias de clientes</p>
                                             </div>
                                         </div>
                                     </div>
@@ -466,7 +468,7 @@
                         <br><br>
                         <li class="list-info">
                             <h4>UX a alto nivel</h4>
-                            <p>Tener un gestor de UX significa que hay una persona que observa el rendimiento y las contribuciones de ese grupo. </p>
+                            <p>Tener un Lead de UX significa que hay una persona que observa el rendimiento y las contribuciones de ese grupo. </p>
                         </li>
                         <li class="list-info">
                             <h4>Rutas de carrera conocidas</h4>
@@ -509,15 +511,15 @@
                                             <div class="main" data-img-url="img/portfolio/sistema-diseno-pm.jpg"></div>
                                         </div>
                                         <div class="description">
-                                            <h3>World’s most famous developers and designers</h3>
+                                            <h3>¿Qué valor aporta?</h3>
                                             <p>
                                                 Utilizar un sistema de diseño garantiza la consistencia de nuestros productos. Esto repercute de manera positiva en la experiencia del usuario y acorta significativamente los tiempos de ideación, desarrollo y elaboración de productos. Por otra parte, los sistemas de diseño son una herramienta especialmente útil para conseguir crear productos digitales capaces de escalar y crecer rápidamente de una forma controlada.
                                                 <br>
                                                 Por último, pero no menos importante, un valor que aporta es que permite dedicar menos tiempo a pensar en detalles superfluos y más a pensar en producto.
                                             </p>
-                                            <h3>What Is Branding?</h3>
-                                            <p>Nullam blandit constituto eam ne, te nam ignota vituper.atoribus. Malis
-                                                cetero quem saipe, prou thendrerit voluptaria.</p>
+                                            <h3>Estilos</h3>
+                                            <p>Color. <br>
+                                                El color es un elemento muy importante de la comunicación visual, por ello, es necesario hacer un uso inteligente e intencional del mismo. A la hora de crear sistemas de diseño distinguimos los siguientes tipos de colores: **</p>
                                             <div class="in_list">
                                                 <ul>
                                                     <li>
@@ -768,8 +770,8 @@
     <!--[if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]-->
     <script src="js/plugins.js"></script>
     <script src="js/init.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <!-- /SCRIPTS -->
+<!--     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+ -->    <!-- /SCRIPTS -->
 </body>
 
 </html>
